--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,10 @@ steps:
   inputs:
     platform: '$(buildPlatform)'
     configuration: '$(buildConfiguration)'
+
+- task: WindowsMachineFileCopy@2
+  inputs:
+    SourcePath: '$(Build.Repository.LocalPath)'
+    MachineNames: '185.71.103.164'
+    TargetPath: 'C:\bogdi'
+    CopyFilesInParallel: false
