Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -37,5 +37,7 @@ steps:
   inputs:
     SourcePath: '$(Build.Repository.LocalPath)'
     MachineNames: '185.71.103.164'
+    adminUserName: 'KYNETIX\PeteaB'
+    adminPassword: '20190605Welcome'
     TargetPath: 'C:\bogdi'
     CopyFilesInParallel: false
